--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Pokédex Search</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pokedex</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Pokédex</h1>
+    <header>
+        <h1>Pokedex</h1>
         <input type="text" id="search" placeholder="Search Pokémon by name...">
+    </header>
+
+    <main>
         <div id="pokemon-info"></div>
-    </div>
+    </main>
+
     <script src="script.js"></script>
 </body>
 </html>
