--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Pokedex</h1>
-        <input type="text" id="search" placeholder="Search Pokémon by name...">
+        <input type="text" id="search" placeholder="Digite o nome do Pokémon..." onkeyup="searchPokemon()">
     </header>
 
     <main>
